[package]
name = "gojsonnet-sys"
version = "0.17.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.55"
cc = "1.0"
gobuild = "0.1.0-alpha.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
