[package]
name = "gojsonnet-sys"
version = "0.17.0+p1"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"
description = "Binding for google/go-jsonnet"
license = "MIT"
repository = "https://github.com/eagletmt/gojsonnet-sys"
include = [
  "Cargo.toml",
  "build.rs",
  "src/lib.rs",
  "vendor/go-jsonnet/LICENSE",
  "vendor/go-jsonnet/go.mod",
  "vendor/go-jsonnet/go.sum",
  "vendor/go-jsonnet/**/*.go",
  "vendor/go-jsonnet/c-bindings/*",
  "vendor/go-jsonnet/cpp-jsonnet/include/libjsonnet.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.55"
cc = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
